--- a/public/bootstrap/css/bootstrap.css
+++ b/public/bootstrap/css/bootstrap.css
@@ -6511,7 +6511,7 @@ a.close.disabled {
   background-color: #007bff !important;
 }
 .bg-primary-polban {
-  background-color: #120a8f !important;
+  background-color: #ffad07 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
